FlightListNav: Use  component

--- a/ember/app/components/flight-list-nav.hbs
+++ b/ember/app/components/flight-list-nav.hbs
@@ -1,4 +1,4 @@
-<BsNav @type="pills" as |nav|>
+<BsNav @type="pills" local-class="flight-list-nav" as |nav|>
   <nav.item>
     {{#nav.link-to "flights.all"}}{{t "all"}}{{/nav.link-to}}
   </nav.item>
@@ -11,23 +11,50 @@
 
   {{#if (or (not date) latest)}}
     <nav.item>
-      {{#nav.link-to "flights.latest"}}
+      <nav.linkTo
+        @route="flights.latest"
+        {{on "click" this.maybePreventDefault}}
+        {{on-click-outside this.closeDatePicker}}
+      >
         {{#if date}}
           {{format-date date format="ddmmyyyy" timeZone="UTC"}}
         {{else}}
           {{t "latest"}}
         {{/if}}
-        &nbsp;<DatePicker @date={{date}} @onSelect={{action "dateSelected"}}>{{fa-icon "calendar"}}</DatePicker>
-      {{/nav.link-to}}
+        <EmberFlatpickr
+          @date={{or this.date null}}
+          @getFlatpickrRef={{action (mut this.flatpickr)}}
+          @onChange={{action "dateSelected"}}
+          @static={{true}}
+          local-class="datepicker"
+        />
+        <button type="button" local-class="datepicker-button" {{on "click" this.openDatePicker}}>
+          {{fa-icon "calendar"}}
+        </button>
+      </nav.linkTo>
     </nav.item>
   {{/if}}
 
   {{#if (and date (not latest))}}
     <nav.item>
-      {{#nav.link-to "flights.date" date}}
+      <nav.linkTo
+        @route="flights.date"
+        @model={{date}}
+        {{on "click" this.maybePreventDefault}}
+        {{on-click-outside this.closeDatePicker}}
+      >
         {{format-date date format="ddmmyyyy" timeZone="UTC"}}
-        &nbsp;<DatePicker @date={{date}} @onSelect={{action "dateSelected"}}>{{fa-icon "calendar"}}</DatePicker>
-      {{/nav.link-to}}
+        <EmberFlatpickr
+          @date={{date}}
+          @getFlatpickrRef={{action (mut this.flatpickr)}}
+          @onChange={{action "dateSelected"}}
+          @static={{true}}
+          local-class="datepicker"
+        />
+        <button type="button" local-class="datepicker-button" {{on "click" this.openDatePicker}}>
+          {{fa-icon "calendar"}}
+        </button>
+      </nav.linkTo>
     </nav.item>
   {{/if}}
 
