flatpickr: Adjust styling

--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import '_power-select';
 
 @import 'bootstrap';
+@import 'flatpickr';
 
 @import 'components/layer-switcher';
 @import 'components/login-form';
