--- a/ember/app/components/upload-result-form.hbs
+++ b/ember/app/components/upload-result-form.hbs
@@ -1,4 +1,4 @@
-<div class="row" ...attributes>
+<div local-class="upload-result-form" class="row" ...attributes>
   <input type="hidden" name="{{prefix}}-status" value={{status.value}}>
   <input type="hidden" name="{{prefix}}-name" value={{name}}>
 
@@ -81,7 +81,18 @@
 
     <div class="form-group col-sm-3">
       <label class="control-label">{{t "takeoff-time"}}</label>
-      <DatetimePicker @date={{takeoffTime}} @onChange={{action "setTakeoffTime"}} @minDate={{igcStartTime}} @maxDate={{igcEndTime}} />
+      <EmberFlatpickr
+        @altFormat="H:i:S"
+        @altInput={{true}}
+        @date={{takeoffTime}}
+        @enableSeconds={{true}}
+        @enableTime={{true}}
+        @noCalendar={{true}}
+        @onChange={{action "setTakeoffTime"}}
+        @minDate={{igcStartTime}}
+        @maxDate={{igcEndTime}}
+        @time_24hr={{true}}
+      />
 
       {{#if validations.attrs.takeoffTime.message}}
         <p class="help-block">{{validations.attrs.takeoffTime.message}}</p>
@@ -90,7 +101,18 @@
 
     <div class="form-group col-sm-3">
       <label class="control-label">{{t "scoring-start-time"}}</label>
-      <DatetimePicker @date={{scoreStartTime}} @onChange={{action "setScoreStartTime"}} @minDate={{igcStartTime}} @maxDate={{igcEndTime}} />
+      <EmberFlatpickr
+        @altFormat="H:i:S"
+        @altInput={{true}}
+        @date={{scoreStartTime}}
+        @enableSeconds={{true}}
+        @enableTime={{true}}
+        @noCalendar={{true}}
+        @onChange={{action "setScoreStartTime"}}
+        @minDate={{igcStartTime}}
+        @maxDate={{igcEndTime}}
+        @time_24hr={{true}}
+      />
 
       {{#if validations.attrs.scoreStartTime.message}}
         <p class="help-block">{{validations.attrs.scoreStartTime.message}}</p>
@@ -99,7 +121,18 @@
 
     <div class="form-group col-sm-3">
       <label class="control-label">{{t "scoring-end-time"}}</label>
-      <DatetimePicker @date={{scoreEndTime}} @onChange={{action "setScoreEndTime"}} @minDate={{igcStartTime}} @maxDate={{igcEndTime}} />
+      <EmberFlatpickr
+        @altFormat="H:i:S"
+        @altInput={{true}}
+        @date={{scoreEndTime}}
+        @enableSeconds={{true}}
+        @enableTime={{true}}
+        @noCalendar={{true}}
+        @onChange={{action "setScoreEndTime"}}
+        @minDate={{igcStartTime}}
+        @maxDate={{igcEndTime}}
+        @time_24hr={{true}}
+      />
 
       {{#if validations.attrs.scoreEndTime.message}}
         <p class="help-block">{{validations.attrs.scoreEndTime.message}}</p>
@@ -108,7 +141,18 @@
 
     <div class="form-group col-sm-3">
       <label class="control-label">{{t "landing-time"}}</label>
-      <DatetimePicker @date={{landingTime}} @onChange={{action "setLandingTime"}} @minDate={{igcStartTime}} @maxDate={{igcEndTime}} />
+      <EmberFlatpickr
+        @altFormat="H:i:S"
+        @altInput={{true}}
+        @date={{landingTime}}
+        @enableSeconds={{true}}
+        @enableTime={{true}}
+        @noCalendar={{true}}
+        @onChange={{action "setLandingTime"}}
+        @minDate={{igcStartTime}}
+        @maxDate={{igcEndTime}}
+        @time_24hr={{true}}
+      />
 
       {{#if validations.attrs.landingTime.message}}
         <p class="help-block">{{validations.attrs.landingTime.message}}</p>
